arreglando los problemas con componente locales

--- a/clase2/index.html
+++ b/clase2/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <div id="app">
+      <startwars></startwars>
     <my-component></my-component>
       <shows></shows> 
       <pre>{{$data}}</pre>
